# HCDE

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  README.md  contributors.md
branding/: BRANDING-LICENSE.md
cmake/: StageSndFileRuntime.cmake
docs/: Cvars.md  HCDE_AIDIRECTOR_AUDIT.md  HCDE_CODE_AUDIT.md  HCDE_COMPATF2_DR_RESERVATIONS.md  HCDE_COMPATIBILITY_SURFACE_STATUS.md  HCDE_CRISPY_FRAMERATE_STATUS.md  HCDE_CRISPY_VFR_AUDIT.md  HCDE_DEDICATED_SERVER_UI_STATUS.md  HCDE_DOOMSDAY_AUDIT.md  HCDE_DOOM_CONNECTOR_LAUNCH.md  HCDE_DOOM_RETRO_AUDIT.md  HCDE_EDGE_CLASSIC_COMPAT_STAGE1.md  HCDE_EDGE_CLASSIC_COMPAT_STAGE2.md  HCDE_EDGE_CLASSIC_COMPAT_STAGE3.md  HCDE_EDGE_CLASSIC_COMPAT_STAGE4.md  HCDE_EDGE_CLASSIC_COMPAT_STAGE5.md  HCDE_ETERNITY_COMPAT_STAGE1.md  HCDE_ETERNITY_COMPAT_STAGE2.md  HCDE_ETERNITY_COMPAT_STAGE3.md  HCDE_ETERNITY_COMPAT_STAGE4.md  HCDE_ETERNITY_COMPAT_STAGE5.md  HCDE_FEATURE_IMPORTS.md  HCDE_GAMEPLAY_SURFACE_STATUS.md  HCDE_GOLDEN_RULES.md  HCDE_ID24_AUDIT.md  HCDE_ID24_COMPAT.md  HCDE_INPUT_FEEL_SURFACE_STATUS.md  HCDE_INTERNATIONAL_DOOM_SURFACE_STATUS.md  HCDE_INVASION.md  HCDE_INVASION_AUDIT.md  HCDE_INVASION_MODE_PLAN.md  HCDE_INVASION_STAGE10_FULL_DOCUMENTATION.md  HCDE_INVASION_STAGE1_MODE_IDENTITY.md  HCDE_INVASION_STAGE2_RULE_WIRING.md  HCDE_INVASION_STAGE2_STATE_MACHINE.md  HCDE_INVASION_STAGE3_SPAWN_RELIABILITY.md  HCDE_INVASION_STAGE3_WAVE_DIRECTOR.md  HCDE_INVASION_STAGE4_SPAWN_POINTS.md  HCDE_INVASION_STAGE4_VICTORY_FAILURE_SEMANTICS.md  HCDE_INVASION_STAGE5_NATIVE_MONSTER_SPAWNING.md  (+75 more)
tools/hcdemaster/: CMakeLists.txt  hcdemaster.cpp
(+357 files in other folders)
